# athletic-analytics

./: 2022-schedule.csv  2022.csv  README.md  cur_year.csv  failures.csv  master.csv  more_years.csv  team_data.db  team_edits.sqbpro
athletics_forecasting/: final_project_sanyal.ipynb  pyproject.toml
athletics_forecasting/.ipynb_checkpoints/: final_project_sanyal-checkpoint.ipynb
athletics_forecasting/src/athletics_forecasting/db_creation/: mlb_html_parser.py  mlb_sql_creation.py  odds_parser.py  sample_html.html
athletics_forecasting/src/athletics_forecasting/mlb_prediction/: simple_model.py
athletics_forecasting/tests/: test_html_parse.py
odds_data/: mlb-odds-2020.csv  mlb-odds-2021.csv
